--- a/TestCpp/TestCpp.vcxproj
+++ b/TestCpp/TestCpp.vcxproj
@@ -168,9 +168,15 @@
     <ClInclude Include="Classes\CurrentLanguageTest\CurrentLanguageTest.h" />
     <ClInclude Include="Classes\FileUtilsTest\FileUtilsTest.h" />
     <ClInclude Include="Classes\HelloWorldScene.h" />
+    <ClInclude Include="Classes\KeypadTest\KeypadTest.h" />
     <ClInclude Include="Classes\LabelTest\LabelTest.h" />
     <ClInclude Include="Classes\LayerTest\LayerTest.h" />
     <ClInclude Include="Classes\MenuTest\MenuTest.h" />
+    <ClInclude Include="Classes\MotionStreakTest\MotionStreakTest.h" />
+    <ClInclude Include="Classes\MutiTouchTest\MutiTouchTest.h" />
+    <ClInclude Include="Classes\NodeTest\NodeTest.h" />
+    <ClInclude Include="Classes\ParallaxTest\ParallaxTest.h" />
+    <ClInclude Include="Classes\ParticleTest\ParticleTest.h" />
     <ClInclude Include="Classes\SceneTest\SceneTest.h" />
     <ClInclude Include="Classes\SpriteTest\SpriteTest.h" />
     <ClInclude Include="Classes\testBasic.h" />
@@ -179,6 +185,7 @@
     <ClInclude Include="Classes\TextInputTest\TextInputTest.h" />
     <ClInclude Include="Classes\Texture2dTest\Texture2dTest.h" />
     <ClInclude Include="Classes\TextureCacheTest\TextureCacheTest.h" />
+    <ClInclude Include="Classes\TileMapTest\TileMapTest.h" />
     <ClInclude Include="Classes\TouchesTest\Ball.h" />
     <ClInclude Include="Classes\TouchesTest\Paddle.h" />
     <ClInclude Include="Classes\TouchesTest\TouchesTest.h" />
@@ -329,15 +336,22 @@
     <ClCompile Include="Classes\CurrentLanguageTest\CurrentLanguageTest.cpp" />
     <ClCompile Include="Classes\FileUtilsTest\FileUtilsTest.cpp" />
     <ClCompile Include="Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="Classes\KeypadTest\KeypadTest.cpp" />
     <ClCompile Include="Classes\LabelTest\LabelTest.cpp" />
     <ClCompile Include="Classes\LayerTest\LayerTest.cpp" />
     <ClCompile Include="Classes\MenuTest\MenuTest.cpp" />
+    <ClCompile Include="Classes\MotionStreakTest\MotionStreakTest.cpp" />
+    <ClCompile Include="Classes\MutiTouchTest\MutiTouchTest.cpp" />
+    <ClCompile Include="Classes\NodeTest\NodeTest.cpp" />
+    <ClCompile Include="Classes\ParallaxTest\ParallaxTest.cpp" />
+    <ClCompile Include="Classes\ParticleTest\ParticleTest.cpp" />
     <ClCompile Include="Classes\SceneTest\SceneTest.cpp" />
     <ClCompile Include="Classes\SpriteTest\SpriteTest.cpp" />
     <ClCompile Include="Classes\testBasic.cpp" />
     <ClCompile Include="Classes\TextInputTest\TextInputTest.cpp" />
     <ClCompile Include="Classes\Texture2dTest\Texture2dTest.cpp" />
     <ClCompile Include="Classes\TextureCacheTest\TextureCacheTest.cpp" />
+    <ClCompile Include="Classes\TileMapTest\TileMapTest.cpp" />
     <ClCompile Include="Classes\TouchesTest\Ball.cpp" />
     <ClCompile Include="Classes\TouchesTest\Paddle.cpp" />
     <ClCompile Include="Classes\TouchesTest\TouchesTest.cpp" />
