--- a/TestCpp/TestCpp.vcxproj
+++ b/TestCpp/TestCpp.vcxproj
@@ -163,10 +163,22 @@
     <ClInclude Include="Classes\AppDelegate.h" />
     <ClInclude Include=".\cocos2dorig.h" />
     <ClInclude Include="Classes\Box2DTest\Box2dTest.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-1159.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-1174.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-350.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-422.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-458\Bug-458.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-458\QuestionContainerSprite.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-624.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-886.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-899.h" />
+    <ClInclude Include="Classes\BugsTest\Bug-914.h" />
+    <ClInclude Include="Classes\BugsTest\BugsTest.h" />
     <ClInclude Include="Classes\ClickAndMoveTest\ClickAndMoveTest.h" />
     <ClInclude Include="Classes\controller.h" />
     <ClInclude Include="Classes\CurrentLanguageTest\CurrentLanguageTest.h" />
     <ClInclude Include="Classes\FileUtilsTest\FileUtilsTest.h" />
+    <ClInclude Include="Classes\FontTest\FontTest.h" />
     <ClInclude Include="Classes\HelloWorldScene.h" />
     <ClInclude Include="Classes\KeypadTest\KeypadTest.h" />
     <ClInclude Include="Classes\LabelTest\LabelTest.h" />
@@ -192,6 +204,7 @@
     <ClInclude Include="Classes\TransitionsTest\TransitionsTest.h" />
     <ClInclude Include="Classes\UserDefaultTest\UserDefaultTest.h" />
     <ClInclude Include="Classes\VisibleRect.h" />
+    <ClInclude Include="Classes\ZwoptexTest\ZwoptexTest.h" />
     <ClInclude Include="include\BasicLoader.h" />
     <ClInclude Include="include\BasicReaderWriter.h" />
     <ClInclude Include="include\CCAccelerometer.h" />
@@ -331,10 +344,22 @@
     <ClCompile Include="Classes\AppDelegate.cpp" />
     <ClCompile Include=".\cocos2dorig.cpp" />
     <ClCompile Include="Classes\Box2DTest\Box2dTest.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-1159.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-1174.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-350.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-422.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-458\Bug-458.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-458\QuestionContainerSprite.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-624.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-886.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-899.cpp" />
+    <ClCompile Include="Classes\BugsTest\Bug-914.cpp" />
+    <ClCompile Include="Classes\BugsTest\BugsTest.cpp" />
     <ClCompile Include="Classes\ClickAndMoveTest\ClickAndMoveTest.cpp" />
     <ClCompile Include="Classes\controller.cpp" />
     <ClCompile Include="Classes\CurrentLanguageTest\CurrentLanguageTest.cpp" />
     <ClCompile Include="Classes\FileUtilsTest\FileUtilsTest.cpp" />
+    <ClCompile Include="Classes\FontTest\FontTest.cpp" />
     <ClCompile Include="Classes\HelloWorldScene.cpp" />
     <ClCompile Include="Classes\KeypadTest\KeypadTest.cpp" />
     <ClCompile Include="Classes\LabelTest\LabelTest.cpp" />
@@ -358,6 +383,7 @@
     <ClCompile Include="Classes\TransitionsTest\TransitionsTest.cpp" />
     <ClCompile Include="Classes\UserDefaultTest\UserDefaultTest.cpp" />
     <ClCompile Include="Classes\VisibleRect.cpp" />
+    <ClCompile Include="Classes\ZwoptexTest\ZwoptexTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
