--- a/TestCpp/TestCpp.vcxproj
+++ b/TestCpp/TestCpp.vcxproj
@@ -177,9 +177,12 @@
     <ClInclude Include="Classes\ClickAndMoveTest\ClickAndMoveTest.h" />
     <ClInclude Include="Classes\controller.h" />
     <ClInclude Include="Classes\CurrentLanguageTest\CurrentLanguageTest.h" />
+    <ClInclude Include="Classes\EffectsAdvancedTest\EffectsAdvancedTest.h" />
+    <ClInclude Include="Classes\EffectsTest\EffectsTest.h" />
     <ClInclude Include="Classes\FileUtilsTest\FileUtilsTest.h" />
     <ClInclude Include="Classes\FontTest\FontTest.h" />
     <ClInclude Include="Classes\HelloWorldScene.h" />
+    <ClInclude Include="Classes\IntervalTest\IntervalTest.h" />
     <ClInclude Include="Classes\KeypadTest\KeypadTest.h" />
     <ClInclude Include="Classes\LabelTest\LabelTest.h" />
     <ClInclude Include="Classes\LayerTest\LayerTest.h" />
@@ -189,6 +192,13 @@
     <ClInclude Include="Classes\NodeTest\NodeTest.h" />
     <ClInclude Include="Classes\ParallaxTest\ParallaxTest.h" />
     <ClInclude Include="Classes\ParticleTest\ParticleTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceNodeChildrenTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceParticleTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceSpriteTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceTextureTest.h" />
+    <ClInclude Include="Classes\PerformanceTest\PerformanceTouchesTest.h" />
+    <ClInclude Include="Classes\RotateWorldTest\RotateWorldTest.h" />
     <ClInclude Include="Classes\SceneTest\SceneTest.h" />
     <ClInclude Include="Classes\SpriteTest\SpriteTest.h" />
     <ClInclude Include="Classes\testBasic.h" />
@@ -358,9 +368,12 @@
     <ClCompile Include="Classes\ClickAndMoveTest\ClickAndMoveTest.cpp" />
     <ClCompile Include="Classes\controller.cpp" />
     <ClCompile Include="Classes\CurrentLanguageTest\CurrentLanguageTest.cpp" />
+    <ClCompile Include="Classes\EffectsAdvancedTest\EffectsAdvancedTest.cpp" />
+    <ClCompile Include="Classes\EffectsTest\EffectsTest.cpp" />
     <ClCompile Include="Classes\FileUtilsTest\FileUtilsTest.cpp" />
     <ClCompile Include="Classes\FontTest\FontTest.cpp" />
     <ClCompile Include="Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="Classes\IntervalTest\IntervalTest.cpp" />
     <ClCompile Include="Classes\KeypadTest\KeypadTest.cpp" />
     <ClCompile Include="Classes\LabelTest\LabelTest.cpp" />
     <ClCompile Include="Classes\LayerTest\LayerTest.cpp" />
@@ -370,6 +383,13 @@
     <ClCompile Include="Classes\NodeTest\NodeTest.cpp" />
     <ClCompile Include="Classes\ParallaxTest\ParallaxTest.cpp" />
     <ClCompile Include="Classes\ParticleTest\ParticleTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceNodeChildrenTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceParticleTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceSpriteTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceTextureTest.cpp" />
+    <ClCompile Include="Classes\PerformanceTest\PerformanceTouchesTest.cpp" />
+    <ClCompile Include="Classes\RotateWorldTest\RotateWorldTest.cpp" />
     <ClCompile Include="Classes\SceneTest\SceneTest.cpp" />
     <ClCompile Include="Classes\SpriteTest\SpriteTest.cpp" />
     <ClCompile Include="Classes\testBasic.cpp" />
